fix: :bug: Header image distortion fixed

--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -133,7 +133,10 @@ nav{
 }
 
 .custom-header-image {
+    width: 100%;
+    height: auto;
     max-width: 300px;
+    max-height: 300px;
     border: 3px solid #ffffff;
     border-radius: 50%;
 }
